yunweiNote/k8s yaml/myjenkins.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    k8s-app: jenkins
  name: jenkins
  namespace: devops
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: jenkins
  template:
    metadata:
      labels:
        k8s-app: jenkins
      namespace: devops
      name: jenkins
    spec:
      hostAliases:      #指定在master创建
        - ip: "193.169.0.3"
          hostnames:
            - "master"
      nodeName: master
      containers:
        - name: jenkins
          image: jenkins/jenkins:latest
#          image: jenkins/jenkins:2.361
#          imagePullPolicy: "Never"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 30080
              name: web
              protocol: TCP
            - containerPort: 30081
              name: agent
              protocol: TCP
#          resources:
#            limits:
#              cpu: 1000m
#              memory: 2Gi
#            requests:
#              cpu: 500m
#              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /login
              port: 30080
            initialDelaySeconds: 60
            timeoutSeconds: 5
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /login
              port: 30080
            initialDelaySeconds: 60
            timeoutSeconds: 5
            failureThreshold: 12
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home   #pod里挂载的路径
#            - name: jenkins-home
#              mountPath: /var/lib/jenkins
            - name: maven-home
              mountPath: /var/lib/maven3
            - name: jenkins-resolv
              mountPath: /etc/resolv.conf

      volumes:
        - name: jenkins-home
          hostPath:
#            path: /data/devops/jenkins  #宿主机（centos）的路径
            path: /root/jenkinsVolume  #宿主机（centos）的路径
            type: DirectoryOrCreate
        - name: maven-home
          hostPath:
            path: /usr/local/maven/apache-maven-3.8.6
            type: DirectoryOrCreate
        - name: jenkins-resolv
          hostPath:
            path: /root/resolv.conf
            type: FileOrCreate
      serviceAccountName: jenkins
---
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: jenkins
  name: jenkins
  namespace: devops
spec:
  type: NodePort
  ports:
    - name: web
      port: 30080
      targetPort: 30080
      nodePort: 30080
    - name: slave
      port: 30081
      targetPort: 30081
      nodePort: 30081
  selector:
    k8s-app: jenkins
